<?xml version="1.0"?>
<package format="2">
  <name>my_servo_control</name>
  <version>0.0.0</version>
  <description>ROS package for controlling a servo motor.</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
<build_export_depend>roscpp</build_export_depend>
<exec_depend>roscpp</exec_depend>
	<build_depend>std_msgs</build_depend>
<build_export_depend>std_msgs</build_export_depend>
<exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>

